Separate "learn_more" to separate translation between internal and external links.

--- a/app/views/about/show.html.haml
+++ b/app/views/about/show.html.haml
@@ -134,7 +134,7 @@
             = render 'features'
 
             .landing-page__features__action
-              = link_to t('about.learn_more'), 'https://joinmastodon.org/', class: 'button button-alternative'
+              = link_to t('about.learn_more_joinmastodon'), 'https://joinmastodon.org/', class: 'button button-alternative'
 
           .landing-page__footer
             %p
@@ -150,7 +150,7 @@
             = render 'features'
 
             .landing-page__features__action
-              = link_to t('about.learn_more'), 'https://joinmastodon.org/', class: 'button button-alternative'
+              = link_to t('about.learn_more_joinmastodon'), 'https://joinmastodon.org/', class: 'button button-alternative'
 
           .landing-page__footer
             %p
