--- a/app/javascript/styles/mastodon/accounts.scss
+++ b/app/javascript/styles/mastodon/accounts.scss
@@ -75,7 +75,7 @@
     small {
       display: block;
       font-size: 14px;
-      color: $highlight-text-color;
+      color: $ui-highlight-color;
       font-weight: 400;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -113,7 +113,7 @@
     width: 33.3%;
     box-sizing: border-box;
     flex: 0 0 auto;
-    color: $darker-text-color;
+    color: $ui-primary-color;
     padding: 5px 10px 0;
     margin-bottom: 10px;
     border-right: 1px solid lighten($ui-base-color, 4%);
@@ -143,7 +143,7 @@
 
     &.active {
       &::after {
-        border-bottom: 4px solid $highlight-text-color;
+        border-bottom: 4px solid $ui-highlight-color;
         opacity: 1;
       }
     }
@@ -178,7 +178,7 @@
     font-size: 14px;
     line-height: 18px;
     padding: 0 15px;
-    color: $darker-text-color;
+    color: $ui-secondary-color;
   }
 
   @media screen and (max-width: 480px) {
@@ -256,7 +256,7 @@
   .current {
     background: $simple-background-color;
     border-radius: 100px;
-    color: $lighter-text-color;
+    color: $ui-base-color;
     cursor: default;
     margin: 0 10px;
   }
@@ -268,7 +268,7 @@
   .older,
   .newer {
     text-transform: uppercase;
-    color: $primary-text-color;
+    color: $ui-secondary-color;
   }
 
   .older {
@@ -293,7 +293,7 @@
 
   .disabled {
     cursor: default;
-    color: opacify($lighter-text-color, 0.1);
+    color: lighten($ui-base-color, 10%);
   }
 
   @media screen and (max-width: 700px) {
@@ -332,7 +332,7 @@
     width: 335px;
     background: $simple-background-color;
     border-radius: 4px;
-    color: $lighter-text-color;
+    color: $ui-base-color;
     margin: 0 5px 10px;
     position: relative;
 
@@ -344,7 +344,7 @@
       overflow: hidden;
       height: 100px;
       border-radius: 4px 4px 0 0;
-      background-color: opacify($lighter-text-color, 0.04);
+      background-color: lighten($ui-base-color, 4%);
       background-size: cover;
       background-position: center;
       position: relative;
@@ -392,7 +392,7 @@
 
       a {
         display: block;
-        color: $inverted-text-color;
+        color: $ui-base-color;
         text-decoration: none;
         text-overflow: ellipsis;
         overflow: hidden;
@@ -414,7 +414,7 @@
     }
 
     .username {
-      color: $lighter-text-color;
+      color: lighten($ui-base-color, 34%);
       font-size: 14px;
       font-weight: 400;
     }
@@ -422,7 +422,7 @@
     .account__header__content {
       padding: 10px 15px;
       padding-top: 15px;
-      color: transparentize($lighter-text-color, 0.1);
+      color: lighten($ui-base-color, 26%);
       word-wrap: break-word;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -434,7 +434,7 @@
 .nothing-here {
   width: 100%;
   display: block;
-  color: $lighter-text-color;
+  color: $ui-primary-color;
   font-size: 14px;
   font-weight: 500;
   text-align: center;
@@ -493,7 +493,7 @@
 
       span {
         font-size: 14px;
-        color: $inverted-text-color;
+        color: $ui-primary-color;
       }
     }
 
@@ -508,7 +508,7 @@
 
   .account__header__content {
     font-size: 14px;
-    color: $darker-text-color;
+    color: $ui-base-color;
   }
 }
 
@@ -522,18 +522,18 @@
     display: inline-block;
     padding: 15px;
     text-decoration: none;
-    color: $highlight-text-color;
+    color: $ui-highlight-color;
     text-transform: uppercase;
     font-weight: 500;
 
     &:hover,
     &:active,
     &:focus {
-      color: lighten($highlight-text-color, 8%);
+      color: lighten($ui-highlight-color, 8%);
     }
 
     &.active {
-      color: $inverted-text-color;
+      color: $ui-base-color;
       cursor: default;
     }
   }
@@ -586,19 +586,19 @@
     font-weight: 500;
     text-align: center;
     width: 94px;
-    color: opacify($darker-text-color, 0.1);
+    color: $ui-secondary-color;
     background: rgba(darken($ui-base-color, 8%), 0.5);
   }
 
   td {
-    color: $darker-text-color;
+    color: $ui-primary-color;
     text-align: center;
     width: 100%;
     padding-left: 0;
   }
 
   a {
-    color: $highlight-text-color;
+    color: $ui-highlight-color;
     text-decoration: none;
 
     &:hover,
