--- a/app/javascript/styles/mastodon/admin.scss
+++ b/app/javascript/styles/mastodon/admin.scss
@@ -33,7 +33,7 @@
       a {
         display: block;
         padding: 15px;
-        color: $darker-text-color;
+        color: rgba($primary-text-color, 0.7);
         text-decoration: none;
         transition: all 200ms linear;
         border-radius: 4px 0 0 4px;
@@ -90,7 +90,7 @@
     padding-left: 25px;
 
     h2 {
-      color: $primary-text-color;
+      color: $ui-secondary-color;
       font-size: 24px;
       line-height: 28px;
       font-weight: 400;
@@ -98,7 +98,7 @@
     }
 
     h3 {
-      color: $primary-text-color;
+      color: $ui-secondary-color;
       font-size: 20px;
       line-height: 28px;
       font-weight: 400;
@@ -109,7 +109,7 @@
       text-transform: uppercase;
       font-size: 13px;
       font-weight: 500;
-      color: $primary-text-color;
+      color: $ui-primary-color;
       padding-bottom: 8px;
       margin-bottom: 8px;
       border-bottom: 1px solid lighten($ui-base-color, 8%);
@@ -117,7 +117,7 @@
 
     h6 {
       font-size: 16px;
-      color: $primary-text-color;
+      color: $ui-secondary-color;
       line-height: 28px;
       font-weight: 400;
     }
@@ -125,7 +125,7 @@
     & > p {
       font-size: 14px;
       line-height: 18px;
-      color: $darker-text-color;
+      color: $ui-secondary-color;
       margin-bottom: 20px;
 
       strong {
@@ -153,10 +153,10 @@
     }
 
     .muted-hint {
-      color: $darker-text-color;
+      color: $ui-primary-color;
 
       a {
-        color: $highlight-text-color;
+        color: $ui-highlight-color;
       }
     }
 
@@ -253,7 +253,7 @@
 
     a {
       display: inline-block;
-      color: $darker-text-color;
+      color: rgba($primary-text-color, 0.7);
       text-decoration: none;
       text-transform: uppercase;
       font-size: 12px;
@@ -266,7 +266,7 @@
       }
 
       &.selected {
-        color: $highlight-text-color;
+        color: $ui-highlight-color;
         border-bottom: 2px solid $ui-highlight-color;
       }
     }
@@ -291,7 +291,7 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 18px;
-    color: $primary-text-color;
+    color: $ui-secondary-color;
 
     @each $lang in $cjk-langs {
       &:lang(#{$lang}) {
@@ -348,7 +348,7 @@
     padding: 7px 4px;
     margin-bottom: 10px;
     font-size: 16px;
-    color: $inverted-text-color;
+    color: $ui-base-color;
     display: block;
     width: 100%;
     outline: 0;
@@ -402,7 +402,7 @@
   font-size: 14px;
 
   a {
-    color: $highlight-text-color;
+    color: $classic-highlight-color;
     text-decoration: none;
 
     &:hover {
@@ -425,7 +425,7 @@
     align-items: center;
     padding: 10px;
     background: $ui-base-color;
-    color: $darker-text-color;
+    color: $ui-primary-color;
     border-radius: 4px 4px 0 0;
     font-size: 14px;
     position: relative;
@@ -452,14 +452,14 @@
   }
 
   &__timestamp {
-    color: $darker-text-color;
+    color: lighten($ui-base-color, 34%);
   }
 
   &__extras {
     background: lighten($ui-base-color, 6%);
     border-radius: 0 0 4px 4px;
     padding: 10px;
-    color: $darker-text-color;
+    color: $ui-primary-color;
     font-family: 'mastodon-font-monospace', monospace;
     font-size: 12px;
     word-wrap: break-word;
@@ -469,7 +469,7 @@
   &__icon {
     font-size: 28px;
     margin-right: 10px;
-    color: $darker-text-color;
+    color: lighten($ui-base-color, 34%);
   }
 
   &__icon__overlay {
@@ -485,7 +485,7 @@
     }
 
     &.negative {
-      background: lighten($error-red, 12%);
+      background: $error-red;
     }
 
     &.neutral {
@@ -496,17 +496,17 @@
   a,
   .username,
   .target {
-    color: $primary-text-color;
+    color: $ui-secondary-color;
     text-decoration: none;
     font-weight: 500;
   }
 
   .diff-old {
-    color: lighten($error-red, 12%);
+    color: $error-red;
   }
 
   .diff-neutral {
-    color: $darker-text-color;
+    color: $ui-secondary-color;
   }
 
   .diff-new {
