--- a/app/javascript/styles/mastodon/containers.scss
+++ b/app/javascript/styles/mastodon/containers.scss
@@ -100,7 +100,7 @@
 
   .name {
     flex: 1 1 auto;
-    color: $darker-text-color;
+    color: $ui-secondary-color;
     width: calc(100% - 88px);
 
     .username {
