--- a/app/javascript/styles/mastodon/footer.scss
+++ b/app/javascript/styles/mastodon/footer.scss
@@ -2,7 +2,7 @@
   text-align: center;
   margin-top: 30px;
   font-size: 12px;
-  color: $darker-text-color;
+  color: darken($ui-secondary-color, 25%);
 
   .domain {
     font-weight: 500;
