--- a/app/javascript/styles/mastodon/forms.scss
+++ b/app/javascript/styles/mastodon/forms.scss
@@ -29,14 +29,14 @@ code {
 
   span.hint {
     display: block;
-    color: $darker-text-color;
+    color: $ui-primary-color;
     font-size: 12px;
     margin-top: 4px;
   }
 
   p.hint {
     margin-bottom: 15px;
-    color: $darker-text-color;
+    color: $ui-primary-color;
 
     &.subtle-hint {
       text-align: center;
@@ -44,10 +44,10 @@ code {
       line-height: 18px;
       margin-top: 15px;
       margin-bottom: 0;
-      color: $darker-text-color;
+      color: $ui-primary-color;
 
       a {
-        color: $highlight-text-color;
+        color: $ui-highlight-color;
       }
     }
   }
@@ -244,35 +244,35 @@ code {
     }
 
     &:focus:invalid {
-      border-bottom-color: lighten($error-red, 12%);
+      border-bottom-color: $error-value-color;
     }
 
     &:required:valid {
-      border-bottom-color: lighten($error-red, 12%);
+      border-bottom-color: $valid-value-color;
     }
 
     &:active,
     &:focus {
-      border-bottom-color: $highlight-text-color;
+      border-bottom-color: $ui-highlight-color;
       background: rgba($base-overlay-background, 0.1);
     }
   }
 
   .input.field_with_errors {
     label {
-      color: lighten($error-red, 12%);
+      color: $error-value-color;
     }
 
     input[type=text],
     input[type=email],
     input[type=password] {
-      border-bottom-color: lighten($error-red, 12%);
+      border-bottom-color: $error-value-color;
     }
 
     .error {
       display: block;
       font-weight: 500;
-      color: lighten($error-red, 12%);
+      color: $error-value-color;
       margin-top: 4px;
     }
   }
@@ -356,7 +356,7 @@ code {
       padding: 7px 4px;
       padding-bottom: 9px;
       font-size: 16px;
-      color: $darker-text-color;
+      color: $ui-base-lighter-color;
       font-family: inherit;
       pointer-events: none;
       cursor: default;
@@ -366,7 +366,7 @@ code {
 
 .flash-message {
   background: lighten($ui-base-color, 8%);
-  color: $darker-text-color;
+  color: $ui-primary-color;
   border-radius: 4px;
   padding: 15px 10px;
   margin-bottom: 30px;
@@ -378,6 +378,7 @@ code {
   }
 
   .oauth-code {
+    color: $ui-secondary-color;
     outline: 0;
     box-sizing: border-box;
     display: block;
@@ -386,7 +387,7 @@ code {
     padding: 10px;
     font-family: 'mastodon-font-monospace', monospace;
     background: $ui-base-color;
-    color: $primary-text-color;
+    color: $ui-primary-color;
     font-size: 14px;
     margin: 0;
 
@@ -425,7 +426,7 @@ code {
   text-align: center;
 
   a {
-    color: $darker-text-color;
+    color: $ui-primary-color;
     text-decoration: none;
 
     &:hover {
@@ -438,7 +439,7 @@ code {
 .follow-prompt {
   margin-bottom: 30px;
   text-align: center;
-  color: $darker-text-color;
+  color: $ui-primary-color;
 
   h2 {
     font-size: 16px;
@@ -446,7 +447,7 @@ code {
   }
 
   strong {
-    color: $primary-text-color;
+    color: $ui-secondary-color;
     font-weight: 500;
 
     @each $lang in $cjk-langs {
@@ -483,7 +484,7 @@ code {
 
 .qr-alternative {
   margin-bottom: 20px;
-  color: $darker-text-color;
+  color: $ui-secondary-color;
   flex: 150px;
 
   samp {
@@ -568,7 +569,7 @@ code {
 
 .post-follow-actions {
   text-align: center;
-  color: $darker-text-color;
+  color: $ui-primary-color;
 
   div {
     margin-bottom: 4px;
@@ -581,7 +582,7 @@ code {
 
   h4 {
     font-size: 16px;
-    color: $primary-text-color;
+    color: $ui-base-lighter-color;
     text-align: center;
     margin-bottom: 20px;
     border: 0;
