--- a/app/javascript/styles/mastodon/stream_entries.scss
+++ b/app/javascript/styles/mastodon/stream_entries.scss
@@ -84,7 +84,7 @@
         font-size: 14px;
 
         .status__relative-time {
-          color: $lighter-text-color;
+          color: $ui-primary-color;
         }
       }
     }
@@ -93,7 +93,7 @@
       display: block;
       max-width: 100%;
       padding-right: 25px;
-      color: $lighter-text-color;
+      color: $ui-base-color;
     }
 
     .status__avatar {
@@ -123,7 +123,7 @@
 
       strong {
         font-weight: 500;
-        color: $inverted-text-color;
+        color: $ui-base-color;
 
         @each $lang in $cjk-langs {
           &:lang(#{$lang}) {
@@ -134,15 +134,15 @@
 
       span {
         font-size: 14px;
-        color: $inverted-text-color;
+        color: $ui-primary-color;
       }
     }
 
     .status__content {
-      color: $inverted-text-color;
+      color: $ui-base-color;
 
       a {
-        color: $highlight-text-color;
+        color: $ui-highlight-color;
       }
 
       a.status__content__spoiler-link {
@@ -180,7 +180,7 @@
 
         strong {
           font-weight: 500;
-          color: $inverted-text-color;
+          color: $ui-base-color;
 
           @each $lang in $cjk-langs {
             &:lang(#{$lang}) {
@@ -191,7 +191,7 @@
 
         span {
           font-size: 14px;
-          color: $lighter-text-color;
+          color: $ui-primary-color;
         }
       }
     }
@@ -207,10 +207,10 @@
     }
 
     .status__content {
-      color: $inverted-text-color;
+      color: $ui-base-color;
 
       a {
-        color: $highlight-text-color;
+        color: $ui-highlight-color;
       }
 
       a.status__content__spoiler-link {
@@ -225,7 +225,7 @@
 
     .detailed-status__meta {
       margin-top: 15px;
-      color: $lighter-text-color;
+      color: $ui-primary-color;
       font-size: 14px;
       line-height: 18px;
 
@@ -243,7 +243,7 @@
 
     .status-card {
       border-color: lighten($ui-secondary-color, 4%);
-      color: $lighter-text-color;
+      color: darken($ui-primary-color, 4%);
 
       &:hover {
         background: lighten($ui-secondary-color, 4%);
@@ -252,7 +252,7 @@
 
     .status-card__title,
     .status-card__description {
-      color: $inverted-text-color;
+      color: $ui-base-color;
     }
 
     .status-card__image {
@@ -262,7 +262,7 @@
 
   .media-spoiler {
     background: $ui-base-color;
-    color: $darker-text-color;
+    color: $ui-primary-color;
   }
 
   .pre-header {
@@ -270,7 +270,7 @@
     padding-left: (48px + 14px * 2);
     padding-bottom: 0;
     margin-bottom: -4px;
-    color: $lighter-text-color;
+    color: $ui-primary-color;
     font-size: 14px;
     position: relative;
 
@@ -280,7 +280,7 @@
     }
 
     .status__display-name.muted strong {
-      color: $lighter-text-color;
+      color: $ui-primary-color;
     }
   }
 
