--- a/app/javascript/styles/slack-like-mastodon/diff.scss
+++ b/app/javascript/styles/slack-like-mastodon/diff.scss
@@ -1,66 +1,115 @@
 /* ==UserStyle==
 @name           Slack like Mastodon
 @namespace      io.plusminus.mstdn.like.slack
-@version        1.1.0
+@version        1.4.0
 @description    Slack like Mastodon
 @author         mohemohe
-==/UserStyle== */
+@license        WTFPL
+@preprocessor   stylus
 
-@media(min-width:631px) {
+@var            checkbox moveMyInfo "自身のユーザー情報を上部に表示する" 0
+@var            checkbox hideMyIcon "自身のユーザー情報のアイコンを隠す" 0
+@var            checkbox reduceSidebarPadding "サイドバーの密度を上げる" 0
+@var            checkbox replaceToHash "アイコンフォントの代わりに # を表示する" 0
+@var            checkbox selectedItemBackground "選択しているペインを背景色で表現する" 0
+==/UserStyle== */
+@-moz-document regexp("https://mstdn\\..*/web/?.*") {
     /* Slackっぽい左右分割レイアウトにする */
-    .ui {
-        flex-direction: row;
+    .columns-area__panels {
+        flex-direction: row-reverse;
     }
 
-    /* タブバー常時表示 */
+    /* タブバー常時非表示 */
     .tabs-bar {
+        display: none;
+    }
+
+    /* サイドバー常時表示 */
+    .columns-area__panels__pane--navigational {
+        display: block !important;
+        width: 220px !important; /* from slack sidebar width */
+        flex-shrink: 0;
+    }
+    
+    /* サイドバーがスクロールできるようにする */
+    .columns-area__panels__pane--navigational .columns-area__panels__pane__inner {
+        height: calc(100% - 68px);
+        overflow: auto;
+        box-sizing: border-box;
+    }
+
+    /* サイドバーのリンクを1行表示にする */
+    .columns-area__panels__pane__inner {
+        width: 100%;
+    }
+
+    .columns-area__panels__pane__inner .column-link {
         display: flex;
-        flex-direction: column;
-        margin: 10px;
-        width: 48px;
+    }
+
+    .columns-area__panels__pane--navigational .column-link span {
+        word-break: keep-all;
+        width: 100%;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+    }
+
+    .columns-area__panels__main {
+        width: calc(100vw - 190px) !important;
+        max-width: calc(100vw - 190px) !important;
+        height: calc(100vh - 50px);
+    }
+
+    /* 投稿欄を下部に移動 */
+    .columns-area__panels__pane--compositional {
+        position: absolute;
+        width: 100vw;
+        min-height: 40px !important;
         z-index: 1;
     }
 
-    /* タブバー上寄せ */
-    .tabs-bar__link {
-        flex: 0;
+    /* 投稿欄レイヤーのマウスイベントを透過させる */
+    .columns-area__panels__pane--compositional,
+    .columns-area__panels__pane--compositional .columns-area__panels__pane__inner,
+    .columns-area__panels__pane--compositional .columns-area__panels__pane__inner .compose-panel {
+        pointer-events: none;
     }
-
-    /* タブバー文字消し */
-    .tabs-bar__link span {
-        display: none;
+    
+    .columns-area__panels__pane--compositional .columns-area__panels__pane__inner .compose-panel * {
+        pointer-events: all;
     }
-
-    /* TLと投稿欄の配置を逆転させる */
-    .columns-area {
-        flex-direction: column-reverse;
-    }
-
-    /* シングルカラム化 */
-    .drawer .drawer__header,
-    .column {
-        display: none;
-    }
-
-    .drawer {
-        width: 100%;
-    }
-
-    .drawer[role="region"] {
-        padding: 5px 10px 10px 0px !important;
-        padding-left: 5px !important;
-    }
-
-    .column:last-child {
+    
+    /* */
+    .columns-area__panels__pane--compositional .columns-area__panels__pane__inner .compose-panel {
         display: flex;
-        width: 100%;
-        flex: 1;
+        flex-direction: row;
+        align-items: flex-end;
+        margin-top: 0;
     }
 
-    /* カラム下検索バーの非表示 */
-    .drawer .search {
+    /* 投稿欄を横いっぱいに広げる */
+    .columns-area__panels__pane--compositional .columns-area__panels__pane__inner .compose-panel {
+        width: 100%;
+    }
+
+    /* 投稿欄の不要な要素を非表示 */
+    .columns-area__panels__pane--compositional .columns-area__panels__pane__inner .compose-panel .search,
+    .columns-area__panels__pane--compositional .columns-area__panels__pane__inner .compose-panel .flex-spacer,
+    .columns-area__panels__pane--compositional .columns-area__panels__pane__inner .compose-panel .getting-started__footer {
         display: none;
-    }        
+    }
+    
+    /* アイコンとか名前の部分の調整 */
+    .columns-area__panels__pane--compositional .columns-area__panels__pane__inner .compose-panel .navigation-bar {
+        width: 220px;
+        box-sizing: border-box;
+        padding: 10px !important;
+    }
+    
+    .columns-area__panels__pane--compositional .columns-area__panels__pane__inner .compose-panel .navigation-bar .navigation-bar__actions {
+        transform: rotate(180deg);
+    }
 
     /* 下部投稿欄の横方向配置 */
     .drawer__pager {
@@ -78,33 +127,22 @@
         height: 100%;
     }
 
-    /* 投稿欄下部の画像を消す */
-    .drawer__inner__mastodon {
-        display: none;
-    }
 
-    /* 入力欄にオーバーラップされて表示される検索結果を消す */
-    .drawer__inner.darker {
-        display: none;
-    }
-
-    /* 自分のアイコンとか名前とかのコンテナーのpadding 10pxが重複するから打ち消す */
-    .navigation-bar {
-        padding-right: 0;
-    }
-
-    /* 自分の名前とかプロフィール編集とかの非表示 */
-    .navigation-bar__profile {
-        display: none;
-    }
-
-    /* 自分の名前とかプロフィール編集とか右側入力メイン部分のコンテナーを幅いっぱいまで伸ばす
-       コンテナー内は下寄せ */
-    .compose-form {
+    /* 自分の名前とかプロフィール編集とか右側入力メイン部分のコンテナーを幅いっぱいまで伸ばす コンテナー内は下寄せ */
+   .compose-form {
         flex: 1;
         display: flex;
         flex-direction: row;
         align-items: flex-end;
+        background: #17191f;
+    }
+    
+    /* 非公開とかDMとかの表示をサイドバーに押し込む */
+    .compose-form__warning {
+        position: absolute;
+        left: 10px;
+        max-width: 220px;
+        box-sizing: border-box;
     }
 
     /* CW入力部分がふわって出て来るのをやめる */
@@ -127,6 +165,7 @@
     .spoiler-input.spoiler-input--visible {
         width: 210px;
         margin-right: 10px;
+        margin-bottom: 0 !important;
     }
 
     /* 入力欄を初期単行表示にする */
@@ -148,7 +187,6 @@
         position: relative;
     }
 
-    /* emojiサジェストがクソ大きいのを普通にする */
     .compose-form__autosuggest-wrapper .autosuggest-textarea .autosuggest-textarea__suggestions .autosuggest-textarea__suggestions__item,
     .compose-form__autosuggest-wrapper .autosuggest-textarea .autosuggest-textarea__suggestions .autosuggest-textarea__suggestions__item * {
         max-height: 1em !important;
@@ -180,6 +218,7 @@
         align-items: center;
         box-sizing: border-box;
         border-radius: 4px !important;
+        height: 40px;
     }
 
     /* トゥートボタンに余白がないので足す */
@@ -209,21 +248,94 @@
         height: 40px !important;
         display: block;
     }
+    
+    /* 公開範囲のポップアップが隠れるのを直す */
+    .privacy-dropdown__dropdown {
+        z-index: 2;
+    }
 
     /* TL内の画像が異様に伸びないように固定する */
-    .media-gallery,
+    .media-gallery {
+        display: flex;
+        height: fit-content !important;
+    }
+
+    .spoiler-button {
+        max-width: 25%;
+        height: 120px;
+        min-width: 25%;
+    }
+    
+    .spoiler-button.spoiler-button--minified {
+        position: absolute !important;
+        height: 0 !important;
+    }
+    
     .media-gallery__item {
-        width: auto !important;
-        height: auto !important;
+        display: flex;
+        align-items: center;
+        max-width: 25%;
+        min-width: 25%;
+        height: 120px !important;
     }
+    
+    /* ここまで基本スタイル */
 
-    .media-spoiler {
-        max-height: 120px;
-        max-width: calc(100% / 4);
+    /* ここから設定によるオーバーライド mastodon本体に組み込むときは好みの設定にしてifを消せばOK */
+
+    if moveMyInfo {
+        .columns-area__panels__pane--navigational .columns-area__panels__pane__inner {
+            transform: translate3d(0, 68px, 0);
+        }
+        
+        .columns-area__panels__pane--compositional .columns-area__panels__pane__inner .compose-panel .navigation-bar {
+            position: absolute;
+            top: 0;
+        }
+        
+        .columns-area__panels__pane--compositional .columns-area__panels__pane__inner .compose-panel .navigation-bar .navigation-bar__actions {
+            transform: none;
+        }
+        
+        .compose-form {
+            margin-left: 220px !important;
+        }
     }
-
-    .media-gallery__item-thumbnail img {
-        max-height: 120px;
-        width: auto;
+    
+    if hideMyIcon {        
+        .columns-area__panels__pane--compositional .columns-area__panels__pane__inner .compose-panel .navigation-bar .account__avatar {
+            display: none;
+        }
+        
+        if moveMyInfo {
+            .columns-area__panels__pane--navigational .columns-area__panels__pane__inner {
+                transform: translate3d(0, 59px, 0);
+                height: calc(100% - 59px);
+            }
+        }
+    }
+    
+    if reduceSidebarPadding {
+        .columns-area__panels__pane--navigational .columns-area__panels__pane__inner .navigation-panel .column-link {
+            padding-top: 6px;
+            padding-bottom: 6px;
+        }
+    }
+    
+    if replaceToHash {
+        .columns-area__panels__pane--navigational .columns-area__panels__pane__inner .navigation-panel .column-link:not([target="_blank"]) .fa {
+            margin: 0 !important;
+        }
+        
+        .columns-area__panels__pane--navigational .columns-area__panels__pane__inner .navigation-panel .column-link:not([target="_blank"]) .fa::before {
+            content: "#" !important;
+        }
+    }
+    
+    if selectedItemBackground {
+        .columns-area__panels__pane--navigational .columns-area__panels__pane__inner .navigation-panel .column-link.active {
+            background: #2b90d9;
+            color: #d9e1e8;
+        }
     }
 }
